- Trust Fund can now be selected for non-advanced lifestyles.
- Skill pool tooltips no longer sometimes show the skill's category as its specialization.
- Spell and Complex Form pool tooltips are no longer combine the contribution of their linked attribute and their linked skill.

Data Changes:
- Consolidated all German Data Changes custom data and all German-exclusive content of sourcebooks printed in English into a single German Data Changes c.ustom data folder.
- Individualized Alchemy, Disenchanting, Power, and Spellcasting focuses now properly apply their bonuses. Existing characters with these focuses will need to re-add them or reapply improvements to see any changes. Fixes #4340.
- Whisper of Bones now properly requires Necromancy.
- Injection Darts no longer display a weapon category selection screen and then crash Chummer. Fixes #4352.
- Smartlink from the Shadowrun 2050 ruleset now properly gives a +2 dicepool bonus when using smartguns.
- When creating spirit critters with forces not divisible by 3, the number of optional powers they get is now properly based on rounding the result of the division down instead of up. Fixes #4356.
- All spirits now properly have a starting and maximum Essence equal to their Force instead of to 6. Fixes #4358.
- Extraplanar Travelers is now a full category of selectable critters. Fixes #4394.
- Changed Imbue Item spell from SG to properly require being an adept, mystic adept or having the Advanced Ritual Casting art.
- Off-Road Tires properly cost 400 Nuyen per tire and have an availability of 6.
- Added the Grimmes Erwachen German splatbook and the Storyteller tradition statted in it.
- Fixed page reference for the Extra Fragile critter power. Closes #4420
- Fixed incorrect quality names for the Corp Teen, Rising Star, Company Troubleshooter, Tour of Duty (Desert Wars), In the Thick and Gone Native life modules that prevented them from being taken correctly. Closes #4386